[package]
name = "devclean"
version = "0.1.1"
edition = "2021"
description = "A tool to clean up your development environment"
license = "MIT"
repository = "https://github.com/HuakunShen/devclean"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
color-eyre = "0.6.3"
colored = "2.1.0"
dialoguer = "0.11.0"
fs_extra = "1.3.0"
git2 = "0.18.3"
human_bytes = "0.4.3"
humantime = "2.1.0"
indicatif = "0.17.8"
prettytable-rs = "0.10.0"
rayon = "1.10.0"
serde = { version = "1.0.200", features = ["derive"] }
walkdir = "2.5.0"
