[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
fs_extra = "1.3.0"
git2 = "0.18.3"
human_bytes = "0.4.3"
indicatif = "0.17.8"
prettytable-rs = "0.10.0"
rayon = "1.10.0"
walkdir = "2.5.0"
